Missing dependencies added

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "web-token/jwt-console": "^1.0@dev",
         "web-token/jwt-key-mgmt": "^1.0@dev",
         "padraic/phar-updater": "^1.0",
+        "php-http/message-factory": "^1.0",
+        "php-http/httplug": "^1.1",
         "php-http/guzzle6-adapter": "^1.1.1",
         "bjeavons/zxcvbn-php": "^0.3"
     },
