--- a/box.json.dist
+++ b/box.json.dist
@@ -1,4 +1,5 @@
 {
+  "algorithm": "OPENSSL",
   "chmod": "0755",
   "compression": "GZ",
   "files": [
@@ -18,6 +19,7 @@
   ],
   "git-version": "package_version",
   "intercept": true,
+  "key": ".travis/phar-private.pem",
   "main": "bin/jose",
   "output": "jose.phar",
   "stub": true
