--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,23 @@
 sudo: false
 language: php
+
+cache:
+  directories:
+  - $HOME/.composer/cache
+  - vendor
+
 matrix:
   fast_finish: true
   include:
-    - php: 7.1
+  - php: 7.1
+    env:
+      - EXECUTE_DEPLOYMENT=true
+
 before_install:
-  - openssl aes-256-cbc -K $encrypted_cbd724a3f1cf_key -iv $encrypted_cbd724a3f1cf_iv
-  -in .travis/secrets.tar.enc -out .travis/secrets.tar -d
+  - openssl aes-256-cbc -K $encrypted_cbd724a3f1cf_key -iv $encrypted_cbd724a3f1cf_iv -in .travis/secrets.tar.enc -out .travis/secrets.tar -d
   - phpenv config-rm xdebug.ini
   - composer self-update
+
 install:
   - travis_retry composer install --no-interaction --no-dev --optimize-autoloader --classmap-authoritative
   - composer info -i
