--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_cbd724a3f1cf_key -iv $encrypted_cbd724a3f1cf_iv -in .travis/secrets.tar.enc -out .travis/secrets.tar -d
   - phpenv config-rm xdebug.ini
   - composer self-update
+  - chmod +x bin/deploy.sh
 
 script:
   - echo "No test.\n"
