--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,14 @@
     },
     "require": {
         "php": "^7.1",
-        "web-token/jwt-console": "^1.0",
+        "nyholm/psr7": "^1.0",
         "padraic/phar-updater": "^1.0",
-        "php-http/message-factory": "^1.0",
-        "php-http/httplug": "^1.1",
-        "php-http/guzzle6-adapter": "^1.1.1"
+        "php-http/curl-client": "^2.0",
+        "web-token/jwt-console": "^2.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     },
     "config": {
