--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,12 @@ on:
   push:
     tags:
       - '*'
+env:
+  BOX_VERSION: '3.16.0'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Set Environment Variables
-        uses: allenevans/set-env@v1.0.0
-        with:
-          BOX_VERSION: '3.16.0'
 
       - name: Checkout Code
         uses: actions/checkout@v2
