--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    steps:
       - name: Checkout Code
         uses: actions/checkout@v2
         with:
