--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,10 @@
     "prefer-stable": true,
     "config": {
         "optimize-autoloader": true,
-        "platform": {},
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.1"
+        }
     }
 }
