--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
         run: echo ::set-output name=version::${GITHUB_REF#refs/tags/}
 
       - name: Self-Test
-        run: ./example.phar --version
+        run: ./jose.phar --version
 
       - name: Create Release
         uses: ncipollo/release-action@v1
@@ -81,5 +81,5 @@ jobs:
           body: 'Next stable release.'
           # This will update existing tags if any
           allowUpdates: true
-          artifacts: example.phar
+          artifacts: jose.phar
           artifactContentType: application/x-php
